--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+:root
+{
+  --yellow: #F5C32C;
+    --orange : #FCA61F;
+    --black : #242D49;
+    --darkpurple: #c320fa ; 
+    --gray : #788097;
+    --blueCard : #DDF8FE;
+    --purple: rgb(238 210 255);
+    --boxShadow : 0px 19px 60px rgb(0 0 0 / 8%);
+    --orangeCard: rgba(252, 166, 31, 0.45);
+    --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+    padding: 0.5rem 3.5rem;
+    overflow: hidden;
+    color: var(--gray);    
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.button{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-radius: 34px;
+  border: none;
   color: white;
+  font-size:16px;
+  padding: 8px 20px 8px 20px;
+  background:linear-gradient(180deg, #c320fa 26%, #754AF1 99% );
+  box-shadow:0px 20px 24px 3px rgba(101, 72, 186, 0.45);
+
+
+
 }
 
-.App-link {
-  color: #61dafb;
+.button:hover{
+  background: white;
+  cursor: pointer;
+  color: var(--darkpurple);
+  border: 1px solid var(--purple);
+  
 }
+  
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  
