--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -1,17 +1,21 @@
 .about{
     display: flex;
-    margin-top: 25rem;
+    margin-top: 30rem;
+    justify-content: space-between;
 
-
+    justify-content: right ;
 }
 
-.a-left{
+.about div{
+    display: block;
 
     display:flex;
     position: relative;
     flex:1;    
     flex-direction: column;
     gap: 1rem;
+
+    
 }
 
 .a-right{
@@ -22,7 +26,7 @@
 .a-left>:nth-child(1){
 
     color: var(--black);
-    font-size: 2.5rem;
+    font-size: 4rem;
     font-weight: bold;
 
 }
@@ -31,14 +35,14 @@
 .a-left>:nth-child(2){
 
     color: var(--grey);
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     margin-top: 1rem;
 
 }
 
 .a-image{
-    transform: scale(0.25);
-    margin-top:-50%;    
-    
+    transform: scale(0.35);
+    margin-top:-40%;    
+    border-radius: 5%;
 }
