--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -1,14 +1,16 @@
 .about{
     display: flex;
-    margin-top: 30rem;
+    max-width: 1200px;
+    padding-top: 25rem;
     justify-content: space-between;
-
+    position: relative;
     justify-content: right ;
+    margin: 2rem auto;
 }
 
 .about div{
     display: block;
-
+    margin-left: 2rem;
     display:flex;
     position: relative;
     flex:1;    
@@ -22,6 +24,7 @@
 
     flex:1; 
 }
+
 
 .a-left>:nth-child(1){
 
@@ -45,4 +48,14 @@
     transform: scale(0.35);
     margin-top:-40%;    
     border-radius: 5%;
+}
+
+.bg{
+
+    transform: scale(1.2);
+    
+    position:absolute;
+    border-radius: 10px;
+    
+
 }
