--- a/src/component/Portfolio/Portfolio.css
+++ b/src/component/Portfolio/Portfolio.css
@@ -4,7 +4,7 @@
     justify-content: center;
     flex-direction:  column;
     height: 70vh;
-    margin-top: -15%;
+    margin-top: 1rem;
 }
 
 .portfolio span:nth-of-type(1){
