--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -59,3 +59,15 @@
     height: 2rem;
     
 }
+
+@media screen and (max-width: 480px) {
+    .n-list {
+      display: none;
+    }
+
+    .n-button{
+        margin-left: 35%;
+        
+    }
+
+  }
