--- a/src/component/Services/Services.css
+++ b/src/component/Services/Services.css
@@ -53,3 +53,22 @@
 
     position: absolute;
 }
+
+@media screen and (max-width: 480px) {
+    .services {
+      margin-top: -10%;
+      flex-direction: column;
+      gap: 5rem;
+      height: 90rem;
+      padding: 0;
+    }
+  
+    .cards {
+      display: flex;
+      flex-direction: column;
+      gap: 17rem;
+    }
+    .cards > * {
+      position: static;
+    }
+  }
