--- a/src/component/Contact/Contact.css
+++ b/src/component/Contact/Contact.css
@@ -53,3 +53,11 @@ textarea{
     height: 4rem!important;
 }
 
+
+@media screen and (max-width: 480px){
+    .card{
+        width: 60%;
+        justify-content: center;
+        margin-left: 15%;
+    }
+  }
