--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -59,3 +59,40 @@
     
 
 }
+
+@media screen and (max-width: 480px) {
+    .about {
+      margin-top: 32rem;
+      flex-direction: column;
+      gap: 1rem;
+      height: 30rem;
+      padding: 0;
+    }
+
+    .bg{
+
+        transform: scale(10.5); 
+        margin-top: 20rem ; 
+        margin-left: 70rem;
+        position:absolute;
+        border-radius: 10px;
+    
+    }
+    .a-left>:nth-child(1){
+
+        color: var(--black);
+        font-size: 3.5rem;
+        font-weight: bold;
+    
+    }
+
+    .a-image{
+        transform: scale(0.75);
+        margin-top:-5%;    
+        border-radius: 5%;
+        margin-left: -5%;
+          
+    }
+  
+    
+  }
