--- a/src/component/Experience/Experience.css
+++ b/src/component/Experience/Experience.css
@@ -3,7 +3,7 @@
     position: relative;
     align-items: center;
     justify-content: center;
-    gap: 5rem;
+    gap: 4rem;
     height: 30vh;
     max-width: 1200px;
     margin: 8rem auto;
@@ -16,15 +16,15 @@
       align-items: center;
   }
   .circle {
-      width: 4rem;
-      height: 4rem;
+      width: 5rem;
+      height: 5rem;
       background: white;
       border-radius: 100%;
       position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.5rem;
+      font-size: 2rem;
       font-weight: bold;
       margin-bottom: 2rem;
   }
@@ -64,6 +64,29 @@
   
   @media screen and (max-width: 480px) {
       .experience{
-          transform: scale(0.7);
+          transform: scale(0.62);
+          padding: 0.5rem 1rem;
+          margin-top: 80%;
       }
+      .blur1, .blur2{
+        transform: scale(1);
+        position: absolute;
+        filter: blur(300px);
+        width: 150%;
+        margin-right: 90%;
+    
+      }
+    
+      .blur2{
+    
+        margin-left: 260%
+      }
+
+      .achievement span:nth-of-type(2){
+        color: var(--darkpurple);
+        font-size: 32px;
+      }
+    .achievement span:nth-of-type(1){ 
+           font-size: 32px;
+    }
   }
