--- a/src/component/Card/Card.css
+++ b/src/component/Card/Card.css
@@ -32,3 +32,11 @@
     margin-bottom: -11rem; 
     margin-top: -8.5rem;
 }
+
+@media screen and (max-width: 480px){
+    .card{
+        width: 60%;
+        justify-content: center;
+        margin-left: 15%;
+    }
+  }
