--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -28,7 +28,29 @@
 }
 
 span{
-
     font-size: 28px;
     font-weight: 600;
 }
+
+@media screen and (max-width: 480px){
+    .f-content{
+      transform: scale(.6);
+      
+    }
+    .f-icon{
+        display: flex;
+        gap: 1.5rem;
+    
+    }
+
+    .f-content{
+
+        gap: 2rem;
+        margin-top: 3rem;
+    }
+    
+    .wave{
+        transform: scale(1.5);
+    }
+
+  }
