--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -9,8 +9,8 @@
 }
 
 .about div{
+
     display: block;
-    margin-left: 2rem;
     display:flex;
     position: relative;
     flex:1;    
@@ -62,11 +62,14 @@
 
 @media screen and (max-width: 480px) {
     .about {
-      margin-top: 32rem;
+      margin-top: -32rem;
       flex-direction: column;
       gap: 1rem;
       height: 30rem;
-      padding: 0;
+      padding: 1;
+      text-align: center;
+
+      /* background-color: aqua; */
     }
 
     .bg{
